fix(scroll-bar): updated the styling of the scrollbar, and tweaked the data table a bit more

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -58,18 +58,20 @@
   }
 }
 
-::-webkit-scrollbar {
-  width: 0.6rem;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  border-radius: 0.25rem;
-  background: hsl(var(--accent));
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  border-radius: 0.25rem;
-  background: hsl(var(--accent-foreground));
+* {
+  ::-webkit-scrollbar {
+    width: 0.6rem;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    border-radius: 0.25rem;
+    background: hsl(var(--accent));
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    border-radius: 0.25rem;
+    background: hsl(var(--muted-foreground));
+  }
 }
